-*- outline -*-

This file contains information about the version numbers
and what's changed.
Hopefully, the #defines ETHERIP_MAYOR and ETHERIP_MINOR
in ether_ipApp/src/drvEtherIP.h are updated accordingly,
so that you can see the current version at runtime via
drvEtherIP_report.

* 2009, June 1 ether_ip-2-18
Attempt to fix crashes which look like this:

1a1ede4 EIP_write_tag +2490: 1a1ddc4 (19fdf90)
1a1de34 EIP_write_tag +14e0: EIP_startup (19fdfb0, 19fdf10)
1a1c60c EIP_startup +70 : 1a1b4e0 (19fdfb0)
1a1b534 EncapsulationHeader_status+668: 1a1b0dc (19fdfb0)
1a1b13c EncapsulationHeader_status+270: EIP_reserve_buffer (19fdfc8, 19fdfc4, 18)
1a1a960 EIP_reserve_buffer+9c : malloc () 

Also with EIP_reserve_buffer(.., 6e) calling free(), and
examples which don't start in EIP_startup().

Exact reason for memory corruption is unclear,
but to reduce the likelyhood of getting the symptom
the EIP_reserve_buffer code for the communication buffer
was removed, instead allocating a full size buffer on startup.
Also removed other uses of EIP_reserve_buffer,
only keeping the basic idea for the allocation
of data for individual tags.
The 'mem string buffer' for logging was also removed,
since I never used it

Found a possible memory corruption scenario when a "write"
cycle was interrupted by an error:
1) Record/device support requests 'do_write' for a tag
2) driver determines what to do, sees do_write, sets is_writing,
   counts write size towards expected packet sizes
3) driver creates write request, clears do_write
4) something fails in the actual send/receive/unpack-response,
   driver disconnects, reconnects, ...
5) driver determines what to do, does NOT see do_write,
   so it counts the read size
6) .. but since is_writing was left on, it actually
   creates a write request
The mismatch between the expected "send" packet size
in steps 5 and 6 can cause step 6 to write beyond
the communication buffer size.

Found problem in initialization of timeout in